@@ -1,3 +1,3 @@
-Little mod for Minecraft 1.8.9 that adds a portable crafting table with some handy features.
+Little mod for Minecraft 1.9 that adds a portable crafting table with some handy features.
 
 Check out the MCF post [here](http://www.minecraftforum.net/forums/mapping-and-modding/minecraft-mods/2595495-portable-crafting) for more information.
