@@ -1,10 +1,10 @@
 mod_name=PortableCrafting
 package_group=com.gr8pefish.portablecrafting
-mod_version=1.2
+mod_version=1.0
 mc_version=1.9
 forge_version=12.16.0.1865-1.9
 
 curse_id=240655
-mappings_version=snapshot_nodoc_20160412
+mappings_version=snapshot_nodoc_20160418
 
 jei_version=3.2.10.185
