@@ -1,15 +1,3 @@
 {
-  "parent":"builtin/generated",
-  "display": {
-    "thirdperson": {
-      "rotation": [ -90, 0, 0 ],
-      "translation": [ 0, 1, -3 ],
-      "scale": [ 0.55, 0.55, 0.55 ]
-    },
-    "firstperson": {
-      "rotation": [ 0, -135, 25 ],
-      "translation": [ 0, 4, 2 ],
-      "scale": [ 1.7, 1.7, 1.7 ]
-    }
-  }
+  "parent":"item/generated"
 }
